lab/ops/es-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - name: elasticsearch
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: docker.elastic.co/elasticsearch/elasticsearch:6.1.2
        ports:
        - containerPort: 9200
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: es-data
          readOnly: false
      volumes:
      - name: es-data
        gcePersistentDisk:
          pdName: es-persisted
          fsType: ext4
          readOnly: false
