lab/ops/lab-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lab-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lab
    spec:
      containers:
      - name: lab
        image:  gcr.io/accretio-platform/lab:$$LAB_VERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
