lab/ops/lab.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: accretio-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.2.2
        ports:
        - containerPort: 9200
