lab/ops/lab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lab-ingress
spec:
  tls:
  - secretName: tls-sec
  backend:
    serviceName: lab
    servicePort: 80
